--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 body {
   margin: 0;
@@ -15,16 +16,25 @@ code {
     monospace;
 }
 
-/*
-1. Prevent padding and border from affecting element width.
-2. Allow adding a border to an element by just adding a border-width.
-*/
-
 *,
 ::before,
 ::after {
-  box-sizing: border-box; /* 1 */
-  border-width: 0; /* 2 */
-  border-style: solid; /* 2 */
-  border-color: theme("borderColor.DEFAULT", currentColor); /* 2 */
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: theme("borderColor.DEFAULT", currentColor);
+}
+
+@layer components {
+  .card-sm {
+    @apply border shadow-sm rounded-md;
+  }
+
+  .card-md {
+    @apply border shadow-md rounded-md;
+  }
+
+  .card-lg {
+    @apply shadow-lg rounded-md;
+  }
 }
